[tool.poetry]
name = "reservoirdb"
version = "0.1.0"
description = ""
authors = [ "Ruan Pearce-Authers <ruan@reservoirdb.com>" ]
include = [ "reservoirdb/py.typed" ]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.3"
dacite = "^1.6.0"
pyarrow = "^3.0.0"
pandas = "^1.2.2"
typing-extensions = "^3.7.4"
reservoirdb_protocol = { git = "https://github.com/reservoirdb/reservoirdb-protocol-python.git", branch = "main" }

[tool.poetry.dev-dependencies]
pytest = "^6.2"
yapf = "^0.31.0"
mypy = "^0.812"
pytest-asyncio = "^0.15.1"
python-dotenv = "^0.21.1"

[build-system]
requires = [ "poetry-core >= 1.0.0" ]
build-backend = "poetry.core.masonry.api"
